--- a/tv_shows_project/tv_shows_app/templates/new_show.html
+++ b/tv_shows_project/tv_shows_app/templates/new_show.html
@@ -17,6 +17,13 @@
         </nav>
         <div class='d-flex justify-content-center'>
             <form class="form-check col-5" action="/shows/new" method="post">
+                {% if messages %}
+                    <ul class="messages alert-danger">
+                        {% for message in messages %}
+                            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
                 {% csrf_token %}
                 <label for="title">Title:</label>
                 <input class="form-control mb-3" type="text" name="title">
